[gd_scene load_steps=17 format=3 uid="uid://1ydef646f5s8"]

[ext_resource type="Script" uid="uid://bajb0rmgkhjof" path="res://Scripts/ObjectScripts/AttackDroneManager.gd" id="1_x1qy1"]
[ext_resource type="Texture2D" uid="uid://dgvalkix6ijlb" path="res://Assets/Images/Objects/Misc/CloudThing.png" id="2_6rg6k"]
[ext_resource type="SpriteFrames" uid="uid://dvad4ka6eq5kw" path="res://Objects/StaticObjects/AttackDroneAnimations.tres" id="3_dgcyn"]
[ext_resource type="Texture2D" uid="uid://b5t40i60nfdmm" path="res://Assets/Images/Objects/Enemy/DroneOutlineSpritesheet.png" id="4_yuunr"]
[ext_resource type="AudioStream" uid="uid://bjwlgs3fjyivv" path="res://Assets/Audio/SFX/DroneGunLoad.wav" id="6_f36hb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8i3f0"]
atlas = ExtResource("4_yuunr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e7am"]
atlas = ExtResource("4_yuunr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlrjv"]
atlas = ExtResource("4_yuunr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sials"]
atlas = ExtResource("4_yuunr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_81ufn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i3f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e7am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlrjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sials")
}],
"loop": true,
"name": &"Idle",
"speed": 20.0
}]

[sub_resource type="Gradient" id="Gradient_0awkx"]
colors = PackedColorArray(0.404511, 0.404511, 0.404511, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q5bk6"]
gradient = SubResource("Gradient_0awkx")
width = 1

[sub_resource type="Gradient" id="Gradient_2j5lc"]
offsets = PackedFloat32Array(0, 0.255208, 0.46875, 0.723958, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_inqbl"]
gradient = SubResource("Gradient_2j5lc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_76aea"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 31.51
initial_velocity_max = 80.29
angular_velocity_min = -400.0
angular_velocity_max = 400.0
orbit_velocity_min = -0.1
orbit_velocity_max = -0.1
gravity = Vector3(0, 0, 0)
linear_accel_max = 7.0
color_ramp = SubResource("GradientTexture1D_inqbl")
turbulence_enabled = true
turbulence_noise_scale = 4.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cp6ji"]
size = Vector2(4, 2)

[node name="DroneManager" type="Node2D"]
script = ExtResource("1_x1qy1")
attack_drone = true

[node name="DronePatrolPoints" type="Line2D" parent="."]
points = PackedVector2Array(551, 176, 300, 20, 67, 166)
width = 2.0

[node name="AttackLine" type="Line2D" parent="."]
clip_children = 1
texture_filter = 4
points = PackedVector2Array(122, 37, 33, 26)
width = 0.1
default_color = Color(0.529412, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="AttackLine"]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
self_modulate = Color(3, 3, 3, 1)
texture_filter = 4
texture_repeat = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_6rg6k")
region_enabled = true
region_rect = Rect2(-5000, -5000, 10000, 10000)

[node name="Drone" type="Node2D" parent="."]

[node name="DroneSpritesheet" type="AnimatedSprite2D" parent="Drone"]
sprite_frames = ExtResource("3_dgcyn")
animation = &"Idle"
autoplay = "Idle"

[node name="DroneOutlineSpritesheet" type="AnimatedSprite2D" parent="Drone"]
visible = false
z_index = 2
sprite_frames = SubResource("SpriteFrames_81ufn")
animation = &"Idle"
autoplay = "Idle"

[node name="GPUParticles2D" type="GPUParticles2D" parent="Drone"]
amount = 10
texture = SubResource("GradientTexture1D_q5bk6")
lifetime = 20.0
visibility_rect = Rect2(-5000, -5000, 10000, 10000)
local_coords = true
process_material = SubResource("ParticleProcessMaterial_76aea")

[node name="SmallBox" type="Area2D" parent="Drone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/SmallBox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_cp6ji")

[node name="DroneHurtbox" type="Area2D" parent="Drone"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Drone/DroneHurtbox"]
polygon = PackedVector2Array(5, 1, 5, -4, -5, -4, -5, 1)

[node name="TargetFoundTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="TargetFoundCooldown" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="WeaponDetected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_f36hb")

[node name="TargetLost" type="AudioStreamPlayer" parent="."]
volume_db = 1.0
bus = &"SFX"

[node name="PlayerRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 49)

[node name="LineRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 49)

[connection signal="body_entered" from="Drone/SmallBox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Drone/SmallBox" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Drone/DroneHurtbox" to="." method="_on_drone_hurtbox_area_entered"]
[connection signal="timeout" from="TargetFoundTimer" to="." method="_on_target_found_timer_timeout"]
